--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
+    "whatwg-fetch": "^3.6.2",
     "ws": "^7.4.5"
   },
   "scripts": {
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "terser-brunch": "^4.0.0"
   }
 }
